--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.51"
+chrono = "0.4.19"
+nom = "7.1.0"
+nom_locate = "4.0.0"
+
+[[bin]]
+name = "hortela-tr"
+path = "src/bin/test_runner.rs"
