--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,14 @@ name = "hortela"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.51"
 chrono = "0.4.19"
 nom = "7.1.0"
 nom_locate = "4.0.0"
-polars = "0.18.0"
+polars = { version = "0.18.0", features = ["temporal", "dtype-date"] }
 thiserror = "1.0.30"
 
 [[bin]]
 name = "hortela-verify"
 path = "src/bin/verifier.rs"
-
-[features]
