Add structopt for the verifier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ chrono = "0.4.19"
 nom = "7.1.0"
 nom_locate = "4.0.0"
 polars = { version = "0.18.0", features = ["temporal", "dtype-date"] }
+structopt = "0.3.25"
 thiserror = "1.0.30"
 
 [[bin]]
