--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ ariadne = "0.1.3"
 chrono = "0.4.19"
 chumsky = "0.6.0"
 num = "0.4.0"
-polars = { version = "0.18.0", features = ["temporal", "dtype-date", "rows"] }
+polars = { path = "../polars/polars", features = ["temporal", "dtype-date", "rows", "downsample",
+"cum_agg", "cross_join"] }
 structopt = "0.3.25"
 thiserror = "1.0.30"
 
